# web

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: FUNDING.yml
.sqlx/: query-04cbefa58cfe21af2b11b58e0c74258e0b3e7b9378719a79871210a3b15c67df.json  query-066b90bcf18c93f1784a84486354cfe1b8f212bb65b34866add0336eb84ff300.json  query-09374674db11bf58d3533a91bc33b0cac59d96d9fb1817fbe7a30fb494a1a1b7.json  query-0df0953755b545d4e8c517e1474524b69442553eadaef7042a51bf4255064a9b.json  query-142a9da5fb9d92a28e73dff336d87d93f153b3ce6cf1a1906c4647f2414b017d.json  query-1d400403fbc6c1c0eae01d9f416c173e272899ea4bddc29215e4c3ea2e331b7d.json  query-1d77b2642a420c21e48474e53c7f94ba5a3e01dc9ab58035bcfda1262950ffae.json  query-3243ebd61f7c3233a4074cfb239cfbfed96e851dd83eca6b6b3b2044cbeba821.json  query-3aead5457cbc88a05bb4a443c87ec61d18444fc62f8f7567e5e4446d477e5d1d.json  query-4b335c552ed4a64a764a9052c713e4b7749ed7a70639cb096f2161b7ecc4730a.json  query-514f70ab2b1913080b1e08ef4771650c848d7831b0bc8250056064ee3d5542f9.json  query-52145eec643f10c16059fcb120e4a937714ba4295b95e9335a65711200385e21.json  query-537b92cffa48d8b499ea5c6890b4018149e9affdc684f186a7fa84907de0ae60.json  query-62f4301e8fdfc7e4ce5b490cb06200bf5fea0aba2a1dd651a18026fcbaf16b13.json  query-6a59c2405168955351b1d0170fa5190685484bf8dc7998c987992c9ae4310ce5.json  query-6a87882a43ce95e75428d22f495e52641d07818faa31e7471f58a5ab8615f0bf.json  query-76b318682764c3196187467ac1c255f7aa3559009dbb47c6a3eb16aa02e6d41a.json  query-76db691e4f3dc56b4a0888059473725685173c4812e82618cbf79447575d8a75.json  query-7d3131aab8c61f610b6b58edb9a92fa80b077ad2ac266a6002ef045bae1ded71.json  query-8d3ea6a5623c2722804c83af2a9c76f28864fbf4efaaae6ed8aecf987c88c4a2.json  query-962a0a8c4ee8f20cdf27503c071121879c0bef85b344afa12f9bf2f9c1e71ef0.json  query-99062b872feb92944b5d06eb1601dbc608ff3af3caa69c9f4d6b9a15462397da.json  query-a4dda783b4669f3435e7c846db0fcaad3c95088e7d811bca295ccf61e383b215.json  query-b3264685db1ad1988c38f1077a98299c97d5e13124ca49e29c14193b41c3bb37.json  (+13 more)
.zed/: settings.json  tasks.json
apps/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  entrypoint.sh  redirects.json
apps/backend/.sqlx/: query-3bc68f6b4b518a87c403f5e4ce88b35b87388e04d85e2a0afee3d52b57856c73.json  query-46c6123ada38b3b7b0f8dc9cf6dbe3a8111f5af189a55179d15163c871e4a67a.json  query-c619e60a94cc7c5f41d7aa3a3415d3a58138c96f0fcaaff1abcb667e8fe1e63b.json
apps/backend/migrations/: 0005_narrow_doctor_spectrum.sql  0008_great_freedom.sql
apps/backend/scripts/: create_author.sh  pending_extensions.sh  psql.sh  raw_sql.sh  reset_author_key.sh
apps/backend/scripts/includes/: env.sh
apps/backend/src/: cache.rs  captcha.rs  database.rs  env.rs  extract.rs  jwt.rs  logger.rs  mail.rs  main.rs  payload.rs  response.rs  s3.rs  telemetry.rs  utils.rs
apps/backend/src/models/: author.rs  extension.rs  extension_image.rs  mod.rs  user.rs  user_password_reset.rs  user_recovery_code.rs  user_session.rs
apps/backend/src/routes/: latest.rs  mod.rs  telemetry.rs
apps/backend/src/routes/auth/: github.rs  login.rs  mod.rs  register.rs
apps/backend/src/routes/auth/login/: checkpoint.rs  mod.rs
apps/backend/src/routes/auth/password/: forgot.rs  mod.rs  reset.rs
apps/backend/src/routes/author/: mod.rs
apps/backend/src/routes/extensions/: latest.rs  mod.rs
apps/backend/src/routes/extensions/_extension_/: images.rs  mod.rs  versions.rs
apps/backend/src/routes/latest/: hydrodactyl.rs  mod.rs
apps/backend/src/routes/stats/: flags.rs  mod.rs  panels.rs  versions.rs
apps/backend/src/routes/user/: github.rs  logout.rs  mod.rs  password.rs  two_factor.rs
apps/backend/src/routes/user/admin/: mod.rs
apps/backend/src/routes/user/admin/extensions/: denied.rs  mod.rs  pending.rs  ready.rs
apps/backend/src/routes/user/admin/extensions/_extension_/: approve.rs  banner.rs  deny.rs  mod.rs
apps/backend/src/routes/user/admin/extensions/_extension_/images/: _image_.rs  mod.rs
apps/backend/src/routes/user/email/: mod.rs  verify.rs
apps/backend/src/routes/user/extensions/: mod.rs
apps/backend/src/routes/user/extensions/_extension_/: banner.rs  mod.rs  ready.rs
apps/backend/src/routes/user/extensions/_extension_/images/: _image_.rs  mod.rs
apps/backend/src/routes/user/sessions/: _session_.rs  mod.rs
apps/backend/src/routes/users/: mod.rs
apps/backend/src/routes/users/_user_/: extensions.rs  mod.rs
apps/backend/src/schedules/: github.rs  mod.rs  prices.rs
apps/backend/static/: api.html  index.html
apps/backend/static/mails/: account_created.html  password_reset.html  verify_email.html
(+330 files in other folders)
