[package]
name = "web"
version = "3.1.1"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing-appender = "0.2.3"
sentry = { version = "0.46.0", default-features = false, features = ["rustls", "reqwest", "backtrace", "contexts", "debug-images", "panic"] }
sentry-tower = { version = "0.46.0", features = ["http", "axum-matched-path"] }
sentry-anyhow = "0.46.0"
axum = "0.8.1"
colored = "3.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "ipnetwork", "uuid"] }
dotenvy = "0.15.7"
rustis = "0.16.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.43.0", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "preserve_order", "chrono", "indexmap"] }
utoipa-axum = "0.2.0"
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
jwt = "0.16.0"
hmac = { version = "0.12.1", features = ["std"] }
chrono = { version = "0.4.40", features = ["serde"] }
indexmap = { version = "2.7.1", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "normalize-path"] }
reqwest = { version = "0.13.0", features = ["json", "form"] }
nestify = "0.3.3"
sha2 = "0.10.8"
sha1 = "0.10.6"
tower = "0.5.2"
include_dir = "0.7.4"
infer = "0.19.0"
rand = "0.9.2"
validator = { version = "0.20.0", features = ["derive"] }
tower-cookies = "0.11.0"
lettre = { version = "0.11.17", default-features = false, features = ["builder", "pool", "smtp-transport", "tokio1-rustls-tls", "tokio1"] }
tikv-jemallocator = "0.6.0"
anyhow = "1.0.98"
regex = "1.11.1"
urlencoding = "2.1.3"
rust-s3 = { version = "0.37.0", default-features = false, features = ["tokio-rustls-tls"] }
image = "0.25.5"
futures-util = "0.3.31"
